Micro tab: Generalized code for flowing toward the drain at constant concentration for reuse by other solutes
Micro tab: Added FlowOutOfDrainStrategy for particles flowing out of the drain faucet
Micro tab: Added FlowToDrainStrategy for moving particles to the drain at a constant rat
Micro tab: Added crystal update strategies to newly formed crystals
Micro tab: Initial progress towards strategy pattern for motion
# 0.00.73 (54684) Jul 31, 2011
Micro tab: Made sodium ion particles flow toward drain faucet at an even rate
Micro tab: Made it so that components flow out through the drain faucet
Micro tab: Fixed: Sometimes when water too low, drawing errors occur, like NaN or Infinity
Micro tab: Water flows toward the drain
Micro tab: Fixed: Particles sometimes bounce out of the water when water level is low
Micro tab: Fixed: Ensure NaCl, NaNO3 and CaCl2 are created with correct ratios of atoms
Micro tab: Fixed: Values readouts overlap in the concentration chart
Micro tab: Fixed: Sometimes when water too low, particles get stuck in the bottom
Micro tab: Fixed: User can exceed max allowed amount of sucrose because falling crystals aren't counted
Micro tab: Fixed: Kit 2, removing NaCl also removes all Cl from the CaCl2
Micro tab: Fixed: Kit 3, exception on removing sodium nitrate from a mixed solution
Micro tab: Fixed: When toggling back and forth between kits, sometimes bar chart labels appear under the kit box, not in the bar chart background
Micro tab: Added crystallization for sodium nitrate
Micro tab: Increased the requested amount of CaCl2 because otherwise it is too difficult to get it to crystallize before the water is almost completely evaporated
Micro tab: Model saturated property instead of unsaturated property
Micro tab: Added incremental crystallization of sucrose
Micro tab: Generalized crystal growth algorithm to make it easier to add support for other solutes
Micro tab: Reset the water level when changing kits